--- a/app/src/main/res/layout/layout_recycle_food.xml
+++ b/app/src/main/res/layout/layout_recycle_food.xml
@@ -1,5 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="10dp"
+    >
+<ImageView
+    android:layout_width="100dp"
+    android:layout_height="100dp"
+    android:id="@+id/foodImg"
+    android:scaleType="fitXY"
+    android:src="@drawable/momo"
+    android:layout_marginRight="20dp"
+    />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/foodName"
+        android:layout_toRightOf="@id/foodImg"
+        android:textSize="25dp"
+        android:text="MOMO"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/foodImg"
+        android:layout_below="@+id/foodName"
+        android:id="@+id/foodType"
+        android:text="Chicken"
+        android:textSize="20dp"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/foodImg"
+        android:layout_below="@id/foodType"
+        android:text="Nrp 150"
+        android:textSize="18dp"
+        android:id="@+id/foodprice"
+        />
+
 
 </RelativeLayout>
